# api/main.go
@@ -71,11 +71,11 @@ func New(opt *RouterOptions) *gin.Engine {
 		// auth.GET("/refresh-token", handlerV1.RefreshToken)
 	}
 
-	fileUpload := v1Group.Group("/file")
-	{
-		fileUpload.POST("/upload", handlerV1.UploadFile)
-		fileUpload.DELETE("/delete", handlerV1.DeleteFile)
-	}
+	// fileUpload := v1Group.Group("/file")
+	// {
+	// 	fileUpload.POST("/upload", handlerV1.UploadFile)
+	// 	fileUpload.DELETE("/delete", handlerV1.DeleteFile)
+	// }
 
 	users := v1Group.Group("/users")
 	{
